--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,7 +8,7 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  /* --bg-color: #00163f; */
+  --bg-color: #00163f;
   --bg-color-transparent: #00163f80;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
@@ -24,7 +24,7 @@
 }
 
 body {
-  background-color: var(--bg-color);
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0vKqgKXPUFRo1t1NMxC31nAvNVcYTx42Sjw&usqp=CAU);
   display: flex;
   flex-flow: column;
   height: 100vh;
@@ -34,7 +34,7 @@ body {
 
 video {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   width: fit-content;
   z-index: -110000000;
 }
@@ -59,6 +59,7 @@ header .container {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 .menu {
@@ -166,6 +167,7 @@ header .container {
 
 section {
   flex: 1 1 auto;
+  
 }
 
 #countdown {
@@ -178,6 +180,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #ffffff52;
 }
 
 .countdown ul {
